force-app/main/default/objects/Strava_Connection__c/Strava_Connection__c.object-meta.xml
<CustomObject>
    <label>Strava Connection</label>
    <nameField>
        <label>Strava Connection Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Strava Connections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>