force-app/main/default/objects/Strava_Connection__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the user account</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Strava Connections</relationshipLabel>
    <relationshipName>Strava_Connections</relationshipName>
    <type>Lookup</type>
</CustomField>