force-app/main/default/objects/Strava_Connection__c/fields/Last_Synced__c.field-meta.xml
<CustomField>
    <fullName>Last_Synced__c</fullName>
    <description>Last successful Strava sync timestamp</description>
    <label>Last Synced</label>
    <type>DateTime</type>
</CustomField>