force-app/main/default/objects/Strava_Connection__c/fields/Strava_Access_Token__c.field-meta.xml
<CustomField>
    <fullName>Strava_Access_Token__c</fullName>
    <description>OAuth access token for Strava API (encrypted)</description>
    <label>Strava Access Token</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>