force-app/main/default/objects/Strava_Connection__c/fields/Strava_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Strava_User_ID__c</fullName>
    <description>Strava athlete ID</description>
    <externalId>true</externalId>
    <label>Strava User ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>